done 2 columns divs

--- a/home.html
+++ b/home.html
@@ -7,10 +7,15 @@
 
     <body>
 
-        <h1 class="firstH1">Welcome to OCR page</h1>
-        <h1>Welcome to OCR page</h1>
-        <h1>Welcome to OCR page</h1>
-        <h1>Welcome to OCR page</h1>
+        <div class="container">
+            <div class="left">
+                <img class="image" src="./images/image1.jpeg" alt="">
+            </div>
+            <div class="right">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque consectetur officia fugit reprehenderit labore eius dicta ullam reiciendis, obcaecati asperiores sapiente debitis sed aspernatur beatae eligendi? Reiciendis, perferendis? Rem, laudantium.</p>
+            </div>
+        </div>
+        <p>text sample </p>
         
 
 
