realized desgin from figma

--- a/home.html
+++ b/home.html
@@ -1,23 +1,44 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="./css/main.css">
-        <title>OCR Home</title>
-        <link rel="icon" type="image/x-icon" href="./images/favicon.png">
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>OCR website</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
+</head>
+<body>
 
-    <body>
+    <header class="header">
+        <div class="logo column">
+            <img src="images/logo.png" alt="">
+        </div>
+        <div class="menu column">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Download</a></li>
+                <li><a href="#">pricing</a></li>
+            </ul>
+        </div>
+    </header>
 
+    <main>
+        <h1>Welcome to my OOCR website</h1>
         <div class="container">
-            <div class="left">
-                <img class="image" src="./images/image1.jpeg" alt="">
+            <div class="column">
+                <img src="images/image1.jpeg" alt="">
             </div>
-            <div class="right">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque consectetur officia fugit reprehenderit labore eius dicta ullam reiciendis, obcaecati asperiores sapiente debitis sed aspernatur beatae eligendi? Reiciendis, perferendis? Rem, laudantium.</p>
+            <div class="column">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aliquam minima autem est rerum voluptas eligendi earum ipsum odio! Architecto officiis ducimus tempore sint odit? Eos, enim ad. Quis, error?</p>
             </div>
         </div>
-        <p>text sample </p>
-        
 
 
-    </body>
+
+
+
+
+
+    </main>
+    
+</body>
 </html>
